welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:3: error: value lenght is not a member of Array[Int]
	var l = nums.lenght
                     ^